# Spykeline

./: LICENSE  README.md  post_install.py  pyproject.toml  setup.py
spykeline/: GUI.py  README.md  __init__.py  config.py  run_spykeline.py  tools.py
spykeline/curation/: __init__.py  classifier.py  curate.py  functions.py  identifier.py  unit.py
spykeline/docs/Example_folder/: Rat128-20221219.xml  info.rhd
spykeline/preprocessing/: __init__.py  preprocess.py  probe.py
spykeline/spikesorting/: README.md  __init__.py  sorter_params.py  sorting.py
spykeline/spykline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
